# parser_freelance

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  foreign_freelance_radar.py  pyproject.toml  requirements.txt
